--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html lang="en" dir="ltr">
   <head>
+    <title>myForm</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
