--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </div>
           <div class="input-box">
             <label class="details">Password</label> <span id="pass"></span>
-            <input type="text" id="password" placeholder="Enter your password" >
+            <input type="password" id="password" placeholder="Enter your password" >
           </div>
         </div>
         <div class="button">
